1999-11-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dbleSCHUR.cc (SCHUR::init): IWORK is always referenced by dgeesx.
	Don't forget to pass length of third string argument to dgeesx.

	* CmplxSCHUR.cc (ComplexSCHUR::init): Don't forget to pass length
	of third string argument to zgeesx.

1999-11-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DiagArray2.cc (DiagArray2<T>::operator () (int, int)):
	On errors, simply return `T ()'.
	(DiagArray2<T>::checkelem (int, int)): Likewise.

1999-11-02  A. Scottedward Hodel <a.s.hodel@eng.auburn.edu>

	* dMatrix.cc (Matrix::expm): Do balancing here instead of using
	AEPBALANCE class.
	* CMatrix.cc (ComplexMatrix::expm): Likewise.

1999-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-shlib.cc, oct-shlib.h: New files.
	* Makefile.in (INCLUDES, SOURCES): Add them to the lists.

1999-10-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* CRowVector.cc (linspace): Allow npoints == 1 if x1 == x2.
	* dRowVector.cc (linspace): Ditto.

	* oct-time.cc (Fstrftime): Don't save or delete tm_zone.
	(octave_time::octave_time (const octave_base_tm&)): Likewise.

1999-10-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DASSL.cc (DASSL::do_integrate (double)): If we have a function
	to evaluate the Jacobian, set info(4), not iwork(4).
	Set rwork(1) to the maximum step size, not rwork(2).

1999-10-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-time.cc: Include <climits>.

1999-10-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* cmd-edit.h (command_editor::do_resize_terminal): New function.
	* cmd-edit.cc (command_editor::resize_terminal): New function.
	(gnu_readline::do_resize_terminal): New function.

Fri Sep  3 12:39:17 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-mappers.cc: Include ieeefp.h and sunmath.h if we have them.
	* lo-ieee.c: Likewise.
	Delete extern "C" declarations for infinity and quiet_nan.

Fri Aug 20 07:58:00 1999  John W. Eaton  <jwe@bevo.che.wisc.edu>
